Prevented wordwrapping of links

--- a/wp-content/themes/david-hide-blog/sass/base/_typography.scss
+++ b/wp-content/themes/david-hide-blog/sass/base/_typography.scss
@@ -25,6 +25,7 @@ body {
 
 .link {
   color: $color-primary;
+  white-space: nowrap;
 
   &:visited {
     color: darken($color-primary, 25%);
